pages layout done

--- a/src/Components/Forms/form.module.css
+++ b/src/Components/Forms/form.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     font-family: "Inter";
+    margin: 2rem 0;
 }
 .form1{
  justify-content: center;
@@ -11,7 +12,7 @@
 }
 .form1>div{
     font-family: "Inter";
-    width: 80%;
+    width: 70%;
     /* border: 1px solid red; */
     margin: 0 auto;
 }
@@ -22,7 +23,7 @@
     font: "Inter";
 }
 #urlLabel{
-    margin-left: 10%;
+    margin-left: 15%;
 }
 .optSpan{
     color: grey;
