--- a/src/Components/Forms/planoptions.module.css
+++ b/src/Components/Forms/planoptions.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     font-family: "Inter";
+    margin: 2rem 0;
 }
 .form1{
  justify-content: center;
