--- a/src/Components/ProgressComp/progressComp.module.css
+++ b/src/Components/ProgressComp/progressComp.module.css
@@ -3,7 +3,7 @@
     align-items: center ;
     width: 90%;
     display: flex;
-    margin: auto;
+    margin:2rem auto;
 }
 .round{
     border: 1px solid whitesmoke;
