almost done media queries remaining

--- a/src/Components/LogoNBrand/logoNBrand.module.css
+++ b/src/Components/LogoNBrand/logoNBrand.module.css
@@ -1,5 +1,5 @@
 .parentDiv{
-    margin: auto;
+    margin:0 auto;
     display: flex;
     justify-content: center;
     /* border: 2px solid blue ; */
