--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,38 @@
 .App {
   text-align: center;
   font-family:"inter";
+  background-color:#e9ecf4;
+  padding: 0.5rem 0.3rem;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+.mainContainer{
+  margin: 1rem 2rem;
+  background-color:white;
+}
+.leftIcon{
+  position: fixed;
+  top: 50%;
+  left: 2.3%;
+  border: 0.5px solid whitesmoke;
+  border-radius:50%;
+  width: 26px;
+  background-color:white;
+  cursor: pointer;
+}
+.rightIcon{
+  position: fixed;
+  top: 50%;
+  right: 2.3%;
+  border: 0.5px solid whitesmoke;
+  border-radius:50%;
+  width: 26px;
+  background-color:white;
+  cursor: pointer;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
