--- a/src/Components/Forms/form.module.css
+++ b/src/Components/Forms/form.module.css
@@ -28,3 +28,26 @@
 .optSpan{
     color: grey;
 }
+
+@media all and (max-width:320px){
+    .form1>div{
+        font-family: "Inter";
+        width: 98%;
+        /* border: 1px solid red; */
+        margin: 0 auto;
+    }
+    #urlLabel{
+        margin-left: 6%;
+    }
+}
+@media all and (min-width:321px) and (max-width:768px){
+    .form1>div{
+        font-family: "Inter";
+        width: 98%;
+        /* border: 1px solid red; */
+        margin: 0 auto;
+    }
+    #urlLabel{
+        margin-left: 0%;
+    }
+}
