--- a/src/Components/Forms/planoptions.module.css
+++ b/src/Components/Forms/planoptions.module.css
@@ -5,18 +5,11 @@
     font-family: "Inter";
     margin: 2rem 0;
 }
-.form1{
- justify-content: center;
- align-items: center ;
- margin:0 5%;
-}
-.form1>div{
-    font-family: "Inter";
-    width: 65%;
-    /* border: 1px solid red; */
-    margin: 0 auto;
-}
+
 .flexParent{
+    font-family: "Inter";
+    width: 70%;
+    margin: 0 auto;
     display: flex;
     justify-content:space-between;
 }
@@ -45,4 +38,64 @@
     color: #fff;
     font: "Inter";
     margin: 5% 0;
+}
+
+@media all and (max-width:320px){
+    .flexParent{
+        font-family: "Inter";
+        width: 90%;
+        /* border: 1px solid red; */
+        margin: 0 auto;
+    }
+    .flexBox1{
+        border: 1px solid #654de4;
+        width: 47%;
+    }
+    .flexBox2{
+        border: 1px solid whitesmoke;
+        width: 47%;
+    }
+    #btn{
+        width: 90%;
+        background-color:#654de4;
+        color: #fff;
+        font: "Inter";
+        margin: 5% auto;
+    }
+}
+
+
+@media all and (min-width:321px) and (max-width:768px){
+    .flexParent{
+        font-family: "Inter";
+        width: 75%;
+        /* border: 1px solid red; */
+        margin: 0 auto;
+    }
+    .flexBox1{
+        border: 1px solid #654de4;
+        width: 47%;
+    }
+    .flexBox2{
+        border: 1px solid whitesmoke;
+        width: 47%;
+    }
+    #btn{
+        width: 75%;
+        background-color:#654de4;
+        color: #fff;
+        font: "Inter";
+        margin: 5% auto;
+    }
+}
+
+@media all and (min-width:769px){
+    #btn{
+        width: 70%;
+        background-color:#654de4;
+        color: #fff;
+        font: "Inter";
+        margin: 5% auto;
+    }
+    
 }
