--- a/src/Pages/createWorkspace/createWorkSpace.module.css
+++ b/src/Pages/createWorkspace/createWorkSpace.module.css
@@ -5,3 +5,23 @@
     width: 45%;
     padding: 3rem 0;
 }
+
+@media all and (max-width:320px){
+    .mainContainer{
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+        width: 90%;
+        padding: 1rem 0;
+    }
+}
+
+@media all and (min-width:321px) and (max-width:768px){
+    .mainContainer{
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+        width: 75%;
+        padding: 2rem 0;
+    }
+}
