--- a/src/Pages/lastPage/lastpage.module.css
+++ b/src/Pages/lastPage/lastpage.module.css
@@ -1,7 +1,27 @@
-.mainContainerLast{
-    width: 45%;
+.mainContainerLast {
+  width: 45%;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  padding: 5.2rem 0;
+}
+
+@media all and (max-width: 320px) {
+  .mainContainerLast {
+    width: 90%;
     margin: auto;
     align-items: center;
     justify-content: center;
-    padding: 5.2rem 0;
+    padding: 1rem 0;
+  }
+}
+
+@media all and (min-width: 321px) and (max-width: 768px) {
+  .mainContainerLast {
+    width: 75%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+  }
 }
