--- a/src/Pages/workspaceInfo/workspaceinfo.module.css
+++ b/src/Pages/workspaceInfo/workspaceinfo.module.css
@@ -5,3 +5,23 @@
     justify-content: center;
     padding: 3rem 0;
 }
+
+@media all and (max-width:320px){
+    .mainContainer{
+        width: 90%;
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem 0;
+    }
+}
+
+@media all and (min-width:321px) and (max-width:768px){
+    .mainContainer{
+        width: 75%;
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem 0;
+    }
+}
